tdf#170287: XLS->XLSX Limit font-name length to 31

Change-Id: I4bb731afaf2f741181ee525af473d6bf4dfac5c2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196963
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit 30e2c72cf63ba6fae8bd2948518169e7d5159e4c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198411
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198783